@@ -4,6 +4,8 @@
   [Bug Fix]
     * Fixed the bug that FreeBSD can't find WNOHANG symbol adding sys/types.h header.
     * Fixed the bug that FreeBSD that major version is less than 13 doesn't support clock_nanosleep.
+  [Test Improvement]
+    * Added the stack trace in the TestUtil::Socket module.
 0.15 2022-10-21
   [Bug Fix]
     * Fixed the bug that FreeBSD can't compile SPVM::Sys for the following error.
